# tower-mini

./: .gitignore  CMakeLists.txt  git_youtube_link.txt
src/: game.cpp  game.h  main.cpp
vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tower_mini.sln  tower_mini.vcxproj  tower_mini.vcxproj.filters
vs2022/tower_mini.dir/Debug/tower_mini.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog
vs2022/tower_mini.dir/Release/: tower_mini.exe.recipe
vs2022/tower_mini.dir/Release/tower_mini.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tower_mini.write.1u.tlog
vs2022/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
vs2022/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
vs2022/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
vs2022/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
